--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blush29842",
+  "name": "ufa191 Pantip Play168",
   "theme": "syntax",
   "version": "0.0.0",
   "description": "ufa191 Pantip Play168 ⭐ ufa191 เว็บพนันออนไลน์ บริการครอบคุลมที่สุด เล่นได้ทุกเกม มีใบรับรองมากมาย ปลอดภัยทุกการเดิมพัน",
